[ease @ hortont@kaylee-20090124051222-grbppwix0tjw2ep6] Fix order of building in makefile.

--- a/libease/Makefile
+++ b/libease/Makefile
@@ -1,11 +1,13 @@
-all: gir
+all: build-lib gir
+
+build-lib:
 	gcc -fPIC `pkg-config --cflags --libs clutter-0.9` -shared ease-text-actor.c ease-actor.c ease-stage.c ease.c -o libease.so
 
 install:
 	cp *.so /usr/local/lib
 	cp *.typelib /usr/local/lib/girepository-1.0/
 
-gir:
+gir: build-lib
 	g-ir-scanner -v --namespace Ease --nsversion=0.1 \
 	--add-include-path=. --include=Clutter-0.8 --library=ease \
 	--pkg clutter-0.8 --output Ease-0.1.gir *.h
